# django-subatomic

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  pytest.ini  ruff.toml  tox.ini  versions.json
.github/: CODEOWNERS
.github/workflows/: build_and_publish.yaml  tests.yml  update-dev-docs.yml  update-docs.yml
dev/: 404.html  index.html  objects.inv
dev/django-atomic/: index.html
dev/features/: index.html
dev/reference/django_subatomic/: index.html
dev/reference/django_subatomic/db/: index.html
dev/reference/django_subatomic/test/: index.html
dev/reference/settings/: index.html
dev/search/: search_index.json
dev/testing-after-commit-callbacks/: index.html
dev/transactions-savepoints-and-atomic/: index.html
dev/why/: index.html
docs/: django-atomic.md  features.md  index.md  testing-after-commit-callbacks.md  transactions-savepoints-and-atomic.md  why.md
docs/reference/: settings.md
docs/static/css/: theme.css
latest/: 404.html
latest/reference/django_subatomic/: index.html
latest/reference/django_subatomic/db/: index.html
latest/reference/django_subatomic/test/: index.html
latest/why/: index.html
src/django_subatomic/: db.py  test.py
tests/: conftest.py  settings.py  test_db.py  test_on_commit_guard.py  test_test.py  test_utils.py
v0.2.1/: 404.html  index.html
v0.2.1/reference/django_subatomic/db/: index.html
v0.2.1/reference/django_subatomic/test/: index.html
v0.2.1/reference/settings/: index.html
v0.2.1/search/: search_index.json
v0.2.1/static/css/: theme.css
v0.2.1/transactions-savepoints-and-atomic/: index.html
v1.0.0/: index.html
v1.0.0/reference/django_subatomic/test/: index.html
