# Project
# -------

[project]
name = "django-subatomic"
version = "0.0.1"
requires-python = ">=3.12"

dependencies = [
]

[project.urls]
# See https://daniel.feldroy.com/posts/2023-08-pypi-project-urls-cheatsheet for
# additional URLs that can be included here.
repository = "https://github.com/kraken-tech/django-subatomic"
changelog = "https://github.com/kraken-tech/django-subatomic/blob/main/CHANGELOG.md"

# Packaging
# ---------

[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


# Development
# -----------

[tool.uv]
default-groups = []

[dependency-groups]
dev = [
    {include-group = "test_runners"},
    {include-group = "python_tests"},
]
test_runners = [
    # Pre-commit checks
    "pre-commit",
]
python_tests = [
    # Python test suite
    "pytest",
]
